--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -15,12 +15,27 @@
 </head>
 
 <body>
-
+<nav>
+  <div>
+  <h1>Bus Fun</h1>
+  </div>
+  <div>
+  <a href="#">Home</a>
+  <a href="#">About Us</a>
+  <a href="#">Blog</a>
+  <a href="#">Contact</a>
+  </div>
+</nav>
   
      
   <div class="container home">
    
     <section class="content-section">
+      <header>
+      <img src='img/fun-bus.jpg' alt="pic of bus">
+      <h1>Welcome to the fun bus!</h1>
+      <p>Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff Stuff.</p>
+      </header>
       <div class="text-content">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
@@ -51,17 +66,17 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>
       </div>
     </section>
   </div><!-- container -->
